tests/miniJava/neg/005661_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class String java { }
